# memprobe

./: .gitignore  backup.sh  dev.sh  test_concurrent.py
memprobe/: README.md  modal_worker.py  pyproject.toml
memprobe/cxxfilt-0.3.0.dist-info/: RECORD
memprobe/memprobe/: __init__.py  bloat.py  budget.py  cli.py  demangle.py  diff.py  history.py  insights.py  libraries.py  models.py  report.py
memprobe/memprobe/parsers/: __init__.py  elf.py  map_gcc.py  map_iar.py
memprobe/memprobe/templates/: diff.html.j2  report.html.j2
memprobe/tests/: test_analysis.py  test_callgraph.py  test_elf_parser.py  test_elf_units.py  test_gcc_parser.py  test_iar_parser.py
memprobe/tests/fixtures/: esp32_wifi_display.elf  esp32c3_sensor_node.elf  nrf52840_ble_peripheral.elf  sample_gcc.map  sample_iar.map  stm32f407_motor_ctrl.elf
website/: .env.example  .gitignore  requirements.txt
website/config/: settings.py  urls.py
website/static/scripts/: address-map.js  analyze.js  auth-flag.js  budget.js  callgraph.js  compare.js  delete-account.js  diff.js  export.js  history.js  init.js  insights.js  landing.js  project.js  sections.js  share.js  symbols.js  tabs.js  theme-init.js  theme.js  treemap.js  trend.js  upload.js  user-menu.js  utils.js
website/static/styles/: base.css  components.css  diff.css  history.css  insights.css  layout.css  table.css  treemap.css  trend.css  upload.css
website/templates/: 404.html  500.html
website/webapp/: adapters.py  admin.py  apps.py  models.py  signals.py  tests_api.py  tests_security.py  urls.py  views.py
(+16 files in other folders)
