[project]
name = "memprobe"
version = "0.1.0"
description = "Firmware memory map visualizer for embedded systems engineers"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pyelftools>=0.29",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# Disassembly-based call graph fallback for ELFs without DWARF call-site info.
callgraph = [
    "capstone>=5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "capstone>=5.0",
]

[tool.setuptools.packages.find]
include = ["memprobe*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
